tests/baselines/reference/typeFromPropertyAssignment22.errors.txt
tests/cases/conformance/salsa/npm-install.js(12,1): error TS2322: Type 'string | number' is not assignable to type 'number | undefined'.
  Type 'string' is not assignable to type 'number | undefined'.


==== tests/cases/conformance/salsa/npm-install.js (1 errors) ====
    function Installer () {
        this.args = 0
    }
    Installer.prototype.loadArgMetadata = function (next) {
        // ArrowFunction isn't treated as a this-container
        (args) => {
            this.args = 'hi'
            this.newProperty = 1
        }
    }
    var i = new Installer()
    i.newProperty = i.args // error, number | string =/> number | undefined
    ~~~~~~~~~~~~~
!!! error TS2322: Type 'string | number' is not assignable to type 'number | undefined'.
!!! error TS2322:   Type 'string' is not assignable to type 'number | undefined'.
    